# health-tracker

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2025_08_20_1632-10810ad48c83_initial.py
app/: app.py  config.py  exceptions.py  integrate.py  main.py
app/adapter/: adapter.py  base.py  external.py
app/api/: routes.py
app/client/: base.py  client.py
app/dependencies/: dependencies.py  exceptions.py  logging.py  request.py
app/repository/: base.py  repositories.py  schemas.py
app/repository/models/: __init__.py  base.py  models.py
app/schemas/: base.py  constants.py  external.py  schemas.py
app/services/: integration.py  service.py
data/: observations.json  patients.json
tests/: conftest.py  test_integration.py  test_routes.py
tests/helpers/: dirty.py  parametrize.py
